--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <p data-aos="fade-up" data-aos-delay="200">Media pendaftaran kekayaan budaya di daerah Badung</p>
         <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
           <a href="#about" class="btn-get-started">Daftar Sekarang</a>
-          <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8"
+          <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" <<<<<<< Updated upstream
             class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Tonton
               Video</span></a>
         </div>
